# 3d_tracking_dataset

./: .gitignore  .gitmodules  BATCH_PROCESSING.md  CLAUDE.md  MUJOCO_LOG.TXT  PREPROCESSING_README.md  README.md  SUBMODULES.md  environment.yml  environment_MAC.yml  example_preprocess.sh  postprocess_stac_data.py  preprocess_keypoints_for_ik.py  pyproject.toml  requirements.txt  test_configs.py
.github/: copilot-instructions.md
assets/fruitfly_v1/: floor.xml  fruitfly.xml  fruitfly_force_fast.xml  fruitfly_v1.xml  fruitfly_v1_free.xml  fruitfly_viz_only.xml
configs/: config.yaml
configs/anatomy/: v1.yaml  v2.yaml  v2_muscles.yaml
configs/dataset/: BDN2_headless.yaml  courtship.yaml  free_running.yaml  free_walking.yaml  postprocessing.yaml  preprocessing.yaml  stationary.yaml
configs/paths/: desktop.yaml  hyak.yaml  hyak_scrubbed.yaml  mbook.yaml  template.yaml  workstation.yaml
data/: fly50.json
data/courtship/: courtship_13.json
docs/superpowers/specs/: 2026-04-11-despike-fly1-bout065-design.md
kpms_fly_project/: config.yml  pca.p
kpms_fly_project_test/: config.yml  pca.p
kpms_fly_project_tests/: config.yml
models/fruitfly_v1/: floor.xml  fruitfly_v1_free.xml
notebooks/: Abdomen_Lift_Detection.ipynb  Abdomen_lift_detection_plan.md  Amputation_Coordination.ipynb  Amputation_Longitudinal_plan.md  Courtship_Analysis01.ipynb  Courtship_Song_Analysis.ipynb  Courtship_Song_Figures.ipynb  Courtship_Song_Figures2.ipynb  Courtship_viz.ipynb  Coutship_viz.ipynb  Data_explore01.ipynb  Hilbert_Phase_Tester.ipynb  Joint_Kinematics_Analysis.ipynb  Joint_kinematics.md  Keypoint_MoSeq_Analysis.ipynb  Minimal_Courtship_viz.ipynb  SAM3_courtship_segmentation.ipynb  Sandbox_Strict.ipynb  Scutellum_Height_Running.ipynb  Scutellum_height_running_plan.md  UMAP_interfly_analysis_plan.md  Untitled-1.ipynb  Verify_Data.ipynb  Verify_Preprocessed_Data.ipynb  Walking_Joint_Animation.ipynb  batch_bout_detection.py  batch_bout_multidetection.py  bout_curation_gui.py  render_with_aligned_sites.py  walking_bout_curation_gui.py  walking_courtship_curation_gui.py
notebooks/iframe_figures/: figure_10.html  figure_13.html  figure_17.html  figure_52.html
notebooks/output/walking_bouts/: confidence_per_keypoint.csv  micro_stops_events.csv  transition_analysis.csv  walking_bouts_summary.csv  z_oscillation_metrics.csv
notebooks/output/walking_bouts/strict/: micro_stops_events.csv  transition_analysis.csv  walking_bouts_summary.csv  z_oscillation_metrics.csv
notebooks/output/walking_bouts/strict/BPN_male_S2/: walking_bouts_summary.csv  z_oscillation_metrics.csv
notebooks/output/walking_bouts/strict/WT_male_S1/: confidence_per_keypoint.csv  walking_bouts_summary.csv  z_oscillation_metrics.csv
notebooks/output/walking_bouts_BPN/strict/: confidence_per_keypoint.csv  micro_stops_events.csv  transition_analysis.csv  walking_bouts_summary.csv  z_oscillation_metrics.csv
notebooks/output/walking_bouts_BPN_2/: walking_bouts_summary.csv  z_oscillation_metrics.csv
notebooks/output/walking_bouts_BPN_2/strict/: micro_stops_events.csv  transition_analysis.csv  walking_bouts_summary.csv  z_oscillation_metrics.csv
notebooks/plotly_drag_component/: index.html  plotly.min.js
scripts/: append_exemplar_to_courtship_h5.py  batch_pair_bouts.py  batch_postprocess_predictions.py  batch_process_predictions.py  batch_run_stac.py  batch_split_valid_bouts.py  combine_data.py  convert_bouts_to_legacy.py  cut_videos_by_frame.py  diagnose_identity_swap.py  export_courtship_raw.py  export_free_running_raw.py  export_free_walking_raw.py  fix_stac_xpos_ordering.py  make_bout_clip.py  merge_paired_bouts.py  postprocess_stac_data.py  preprocess_keypoints_for_ik.py  render_bout_clips.py  rescue_identity_relink_inplace.py  run_full_pipeline.py  run_stac_paired.py  setup_conda_unset_ld_library_path.sh  slurm_run.py  stack_clips.py  stage_calibration_dirs.sh
scripts/git/: README.md  branch.sh  commit.sh  merge.sh  push.sh  setup_submodules.sh  status.sh  sync.sh
tests/: test_assemble_figure.py  test_panel_male_pitch.py  test_sam3_female_com.py
utils/: __init__.py  add_aligned_keypoint_sites.py  add_wing_tracking_sites.py  bout_detection.py  bout_viz.py  centroid_jump_check.py  courtship_detection.py  courtship_figure_panels.py  courtship_loader.py  fly_detection.py  free_running_loader.py  free_walking_loader.py  geometric_angles.py  identity_relink.py  io.py  io_dict_to_hdf5.py  keypoint_filter.py  kp_viz.py  locomotion.py  mask_combine.py  mjx_preprocess.py  optimized_floor_alignment.py  pair_validity.py  path_utils.py  plot_utils.py  pulse_classification_stages.py  pulse_type_cache.py  pulse_types.py  sam3_aligned_bouts.py  sam3_female_com.py  sex_id.py  song_analysis.py  stac_data_utils.py  walking_cycle_filter.py
