[project]
name = "fly-3d-tracking-dataset"
version = "0.1.0"
description = "3D fruit fly behavioral tracking dataset and analysis pipeline (Johnson lab)"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "BSD-3-Clause" }
authors = [{ name = "Elliott Abe", email = "eabe@uw.edu" }]

dependencies = [
    # Core scientific stack
    "numpy>=2.0,<3",
    "matplotlib",
    "pandas",
    "scikit-learn",
    "scikit-image",
    "natsort",
    "tqdm",
    "psutil",
    "loguru",
    "typer",
    "tyro",
    "submitit",
    # Hydra configs
    "hydra-core",
    "omegaconf",
    "ml_collections",
    # IO / data
    "h5py",
    "tifffile",
    "pynwb",
    "hdmf",
    "ndx-pose",
    # JAX ecosystem
    "jax",
    "brax",
    "flax",
    "chex",
    "optax",
    "orbax-checkpoint",
    "jaxopt",
    "jaxlie",
    "jaxls",
    "jax-dataclasses",
    "jax-tqdm",
    "jaxtyping",
    # MuJoCo / simulation
    "mujoco",
    "mujoco-mjx",
    "mujoco-warp",
    "warp-lang",
    "robot-descriptions",
    "yourdfpy",
    "trimesh",
    "manifold3d",
    "pycollada",
    "glfw",
    # PyTorch + vision (used by SAM3 / segmentation utilities)
    "torch",
    "torchvision",
    "torchmetrics",
    "timm",
    "safetensors",
    "huggingface-hub",
    "einops",
    "fvcore",
    "iopath",
    "pycocotools",
    # Image / video
    "opencv-python",
    "decord",
    "mediapy",
    "imageio[ffmpeg]",
    "imageio-ffmpeg",
    # Notebook & widget infrastructure (needed at runtime by some plotting utils)
    "ipywidgets",
    # GPU helpers
    "nvidia-ml-py3",
    # Distributed
    "ray",
    # Editable local submodule (configured via [tool.uv.sources] below)
    "stac-mjx",
]

[project.optional-dependencies]
cuda12 = ["jax[cuda12]"]
dev = [
    "pytest",
    "pytest-cov",
    "coverage",
    "black",
    "ruff",
    "pre-commit",
    "ipykernel",
    "ipympl",
    "jupyterlab",
    "nbstripout",
]
viz = [
    "viser",
    "pyside6",
    "tensorboard",
    "tensorboardx",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

# This repo is an analysis pipeline, not a Python package to publish on PyPI.
# Setting package = false tells uv to manage dependencies in a .venv without
# trying to build or install this project itself.
[tool.uv]
package = false

[tool.uv.sources]
# stac-mjx is vendored as a git submodule and installed editable from there.
stac-mjx = { path = "./stac-mjx", editable = true }

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.black]
line-length = 100
target-version = ["py312"]

